turtleart.lessons.turtleart.Main.CircleSquare.scala.error
Source:10: error: not found: value poseCrayon
	poseCrayon()
        ^