turtleart.lessons.turtleart.Main.CircleSquare.scala.code
override def run() {
for (k <- 1 to 4 ) {
		avance(100)
		droite(90)
	}
	leveCrayon()
	avance(100)
	droite(90)
	poseCrayon()
	for (k <- 1 to 360 ) {
		avance(0.5)
		droite(1)
	}

}
